cta fix download button bg color contrast

--- a/src/style/_cta.scss
+++ b/src/style/_cta.scss
@@ -23,7 +23,7 @@
         font-family: inherit;
         font-weight: 700;
         color: $white;
-        background: $green;
+        background: #038268;
         box-shadow: 0 10px 20px -8px transparent;
     }
 }
