--- a/src/style/general.css
+++ b/src/style/general.css
@@ -254,7 +254,7 @@ img {
   font-family: inherit;
   font-weight: 700;
   color: #fff;
-  background: #04ddb2;
+  background: #038268;
   box-shadow: 0 10px 20px -8px transparent;
 }
 
